--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-magento2",
+  "name": "magento2",
   "version": "0.0.1",
   "description": "Consume Magento 2 REST API",
   "homepage": "https://github.com/adamj88/node-magento2#readme",
@@ -7,7 +7,7 @@
   "files": [
     "dist"
   ],
-  "main": "index.js",
+  "main": "lib/index.js",
   "keywords": [
     "magento",
     "rest"
