Update package test script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "rest"
   ],
   "scripts": {
-    "test": "gulp",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "gulp prepublish"
   },
   "repository": {
