--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "gulp prepublish"
+    "prepublish": "grunt prepublish"
   },
   "repository": {
     "type": "git",
@@ -29,17 +29,16 @@
     "restler": "^3.4.0"
   },
   "devDependencies": {
-    "gulp": "^3.6.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-istanbul": "^0.9.0",
-    "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0",
-    "gulp-babel": "^5.1.0",
-    "del": "^2.0.2",
     "babel-core": "^5.5.0",
-    "isparta": "^3.0.3"
+    "babel-preset-es2015": "^6.1.18",
+    "del": "^2.0.2",
+    "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-coveralls": "^1.0.0",
+    "grunt-eslint": "^17.3.1",
+    "isparta": "^3.0.3",
+    "load-grunt-config": "^0.19.0",
+    "time-grunt": "^1.2.2"
   }
 }
