--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "meow": "^3.3.0",
-    "restler": "^3.4.0"
+    "restler": "^3.4.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^5.5.0",
