--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "del": "^2.0.2",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
-    "grunt-bump": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-coveralls": "^1.0.0",
     "grunt-eslint": "^17.3.1",
+    "grunt-release": "^0.13.0",
     "isparta": "^3.0.3",
     "load-grunt-config": "^0.19.0",
     "time-grunt": "^1.2.2"
